--- a/ClientSystem/Views/Shared/_Layout.cshtml
+++ b/ClientSystem/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">Client System</a>
@@ -24,6 +26,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" asp-controller="AuditLog" asp-action="Index">Audit Logs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-controller="User" asp-action="Index">Users</a>
                 </li>
             </ul>
         </div>
@@ -45,4 +50,5 @@
     <!-- Bootstrap JS -->
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
